# chronicler

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REDESIGN.md  UnreadMessage.md  config.toml
agents/examples/: simple_chat.rs  tool_agent.rs
agents/src/dnd/: app.rs  events.rs  mod.rs
chronicle-bevy/src/effects/: narrative.rs  sound_mapping.rs
chronicle-core/examples/: qa_world_building.rs
chronicle-core/src/: rules.rs  session.rs  testing.rs
chronicle-core/src/dm/: agent.rs  mod.rs  (+1 more)
chronicler-bevy/: Cargo.toml
chronicler-bevy/src/: runtime.rs
chronicler-bevy/src/ui/overlays/: onboarding.rs
chronicler-core/: Cargo.toml
chronicler-core/src/: session.rs
claude/: Cargo.toml
claude/src/: lib.rs
dnd-bevy/: Cargo.toml
dnd-bevy/src/: character_creation.rs  effects.rs  main.rs  sound.rs  state.rs
dnd-core/: Cargo.toml
dnd-core/examples/: generate_transcripts.rs  test_dice.rs  test_session.rs
dnd-core/src/: character_builder.rs  class_data.rs  dice.rs  headless.rs  lib.rs  persist.rs  rules.rs  session.rs  spells.rs  testing.rs  world.rs
dnd-core/tests/: api_integration.rs
dnd-macros/src/: lib.rs
dnd/examples/: test_app_logic.rs
dnd/src/: ai_worker.rs  effects.rs  headless.rs  main.rs
docs/: HOW_IT_WORKS.md
docs/archive/: FRAMEWORK_DESIGN.md
docs/transcripts/: blood_and_thunder.md  goblin_ambush.md  into_the_crypt.md  tavern_trouble.md  the_heist.md  wizards_bargain.md
lib/src/: action.rs  context.rs  error.rs  id.rs  lib.rs  memory.rs  message.rs  safety.rs  tool.rs
scripts/: install-hooks.sh  pre-commit
(+140 files in other folders)
